<resources>
    <string name="app_name">Calendar</string>
    <string name="title_calendar_day_detail">Calendar Day Detail</string>
    <string name="action_settings">Settings</string>

    <string name="action_today">Today</string>
    <string name="action_day_view">Day view</string>
    <string name="action_three_day_view">3 day view</string>
    <string name="action_week_view">Week view</string>
    <string name="title_activity_basic">Basic Example</string>
    <string name="title_activity_asynchronous">Asynchronous Events</string>
    <string name="async_error">Could not download events from the internet</string>

    <!-- dialog -->
    <string name="addCareGiver_title">Add Care Giver</string>
    <string name="addCareGiver_caregiver">Care Giver</string>
    <string name="addCareGiver_patientname">Patient Name</string>
    <string name="addCareGiver_room">Room No.</string>
    <string name="add">Add</string>
    <string name="cancel">Cancel</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>

    <string name="btn_startDate">Start Date</string>
    <string name="btn_endDate">End Date</string>

    <string name="eventDetailActivity">Event Detail</string>
</resources>
