<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="co.alizay.calendar.AddCareGiverActivity" >

    <EditText
        android:id="@+id/etCaregiver"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        android:singleLine="true"
        android:hint="@string/addCareGiver_caregiver"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_constraintLeft_creator="1"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etPatientName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@+id/etCaregiver"
        android:singleLine="true"
        android:hint="@string/addCareGiver_patientname" />

    <EditText
        android:id="@+id/etRoomNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginBottom="16dp"
        android:singleLine="true"
        android:fontFamily="sans-serif"
        android:inputType="number"
        app:layout_constraintTop_toBottomOf="@+id/etPatientName"
        android:hint="@string/addCareGiver_room"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:orientation="horizontal"
        android:layout_margin="5dp"
        app:layout_constraintTop_toBottomOf="@+id/etRoomNumber"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btnStartDateAddCareGiver"
            android:layout_width="0px"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_startDate"/>

        <Button
            android:id="@+id/btnEndDateAddCareGiver"
            android:layout_width="0px"
            android:padding="5dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/btn_endDate"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_gravity="bottom">

        <Button
            android:id="@+id/btnAddAddCareGiver"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/add"/>

        <Button
            android:id="@+id/btnCancelAddCareGiver"
            android:layout_width="0px"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/cancel"/>

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:background="@android:color/white"
        android:layout_width="0dp"
        android:layout_height="0dp"
        tools:layout_constraintTop_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintBottom_creator="1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        android:layout_marginTop="2dp"
        app:layout_constraintTop_toBottomOf="@+id/etCaregiver"
        tools:layout_constraintLeft_creator="1"
        android:layout_marginBottom="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="1.0" >

    </android.support.v7.widget.RecyclerView>

    <!--</LinearLayout>-->
</android.support.constraint.ConstraintLayout>